--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,8 @@
 name: membership
 version: 0.0.8
 author: Dzenan Ridjanovic
-description: Spirals of the membership application with one concept and several web components.
-homepage: http://ondart.me/ui/index.md
+description: A sample application with web components.
+homepage: http://ondart.me/
 dependencies:
-  js: any
   browser: any
   web_ui: any
